--- a/app/javascript/stylesheets/welcome.scss
+++ b/app/javascript/stylesheets/welcome.scss
@@ -6,7 +6,7 @@
   background-image: url(../images/bg.jpg);
   background-position: center center;
   background-size: cover;
-  height: 515px;
+  height: 600px;
   padding-top: 92px;
 
   input.form-control {
@@ -14,6 +14,7 @@
     box-shadow: none;
     border-color: #f8f9fa;
   }
+
   button.btn-outline-light:hover {
     background-color: #d4d4d4;
   }
@@ -22,6 +23,7 @@
 .img-container {
   display: flex;
   margin-bottom: 40px;
+
   img {
     width: auto;
     height: 120px;
@@ -33,22 +35,27 @@
   color: #fff;
   margin-top: 10px;
   margin-bottom: 10px;
+
   p {
     font-size: 12px;
     color: rgb(186, 186, 186);
   }
+
   @media only screen and (min-width: 480px) and (max-width: 768px) {
     h1 {
       font-size: 2rem;
     }
+
     p {
       font-size: 10px;
     }
   }
+
   @media only screen and (max-width: 480px) {
     h1 {
       font-size: 1.6rem;
     }
+
     p {
       font-size: 8px;
     }
@@ -68,6 +75,7 @@ form div.invalid-feedback {
   @media only screen and (max-height: 1024px) {
     min-height: 263px;
   }
+
   @media only screen and (max-width: 700px) {
     h2 {
       font-size: 1.5rem;
@@ -84,6 +92,7 @@ div.empty-records-container,
   h2 {
     color: #bababa;
   }
+
   .text-center {
     min-width: 200px;
   }
@@ -99,4 +108,18 @@ div.empty-records-container,
   font-size: 14px;
   cursor: pointer;
   color: #ccc;
+}
+
+.col-form-label,
+.form-check-label {
+  color: white
+}
+
+#remaining-text {
+  color: white;
+  text-align: right;
+}
+
+#claim_button {
+  background: #9A2CEC;
 }
